--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@ Sorry about that. Just needed to enable JavaScript and become cool. Anyways, wel
     <!-- Argubly more of a suprise if it has rainbow text! -->
     <h2><span style="color:#FF0000">H</span><span style="color:#FF4600">e</span><span style="color:#FF8B00">r</span><span style="color:#FFD100">e</span><span style="color:#E8FF00">'</span><span style="color:#A2FF00">s</span> <span style="color:#5DFF00">a</span> <span style="color:#17FF00">s</span><span style="color:#00FF2E">u</span><span style="color:#00FF74">r</span><span style="color:#00FFB9">p</span><span style="color:#00FFFF">r</span><span style="color:#00B9FF">i</span><span style="color:#0074FF">s</span><span style="color:#002EFF">e</span> <span style="color:#1700FF">f</span><span style="color:#5D00FF">o</span><span style="color:#A200FF">r</span> <span style="color:#E800FF">y</span><span style="color:#FF00D1">o</span><span style="color:#FF008B">u</span><span style="color:#FF0046">!</span></h2>
     <button onclick="alert('You Clicked Me!')" class="btn btn-primary">Click Me!</button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;v&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-    <h1 style="font-size:2em ;"> Here's some of my coding projects! </h1>
+    <h1 style="font-size:2em ;"> My Coding Projects! </h1>
 <h3 style="font-size:1em ;"> My first thing is My shop that I use to sell useless things. </h3>
-    <p><a href="https://codepen.io/Jotaro-Kujo-the-lessful/full/LYwNeZL">Click On This!</a></p>
+    <p><a href="https://codepen.io/Jotaro-Kujo-the-lessful/full/LYwNeZL">www.aadhavinc.codepen.io</a></p>
     <h3 style="font-size:1em ;"> And here is a game that I made! (you use w and s to move and the arrow keys and I reccomend to full screen it)</h3>
-    <p><a href="https://eternalxlks.github.io/eternalxlkswebpong.github.io/">Click On This!</a></p>
-    <h3 style="font-size:1em ;"> The next item is just cool to watch </h3>
-    <p><a href="https://codepen.io/Jotaro-Kujo-the-lessful/full/zYgjrwM">Click On This!</a></p>
+    <p><a href="https://eternalxlks.github.io/eternalxlkswebpong.github.io/">Web Pong!</a></p>
+    <h3 style="font-size:1em ;"> The next item is a simulation of marine life. </h3>
+    <p><a href="https://codepen.io/Jotaro-Kujo-the-lessful/full/zYgjrwM">World War Fish!</a></p>
     <h5> Hey, wanna learn some coding? These are great resources! (I am self thought)</h5>
     <p><a href="https://www.w3schools.com">W3 Schools!</a></p>
     <p><a href="https://www.freecodecamp.org/">Free Code Camp!</a></p>
