--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@ Sorry about that. Just needed to enable JavaScript and become cool. Anyways, wel
 <h3 style="font-size:1em ;"> My first thing is My shop that I use to sell useless things. </h3>
     <p><a href="https://codepen.io/Jotaro-Kujo-the-lessful/full/LYwNeZL">www.aadhavinc.codepen.io</a></p>
     <h3 style="font-size:1em ;"> And here is a game that I made! (you use w and s to move and the arrow keys and I reccomend to full screen it)</h3>
+    <img src="https://user-images.githubusercontent.com/12528718/134925580-9b88a130-bc8f-4171-bac9-55002be74d88.png" alt="GitHub - hheimerd/pong: 🏓 Site with Pong in multiplayer mode"/>
     <p><a href="https://eternalxlks.github.io/eternalxlkswebpong.github.io/">Web Pong!</a></p>
     <h3 style="font-size:1em ;"> The next item is a simulation of marine life. </h3>
     <p><a href="https://codepen.io/Jotaro-Kujo-the-lessful/full/zYgjrwM">World War Fish!</a></p>
