--- a/index.html
+++ b/index.html
@@ -56,9 +56,10 @@ Sorry about that. Just needed to enable JavaScript and become cool. Anyways, wel
     <button onclick="alert('You Clicked Me!')" class="btn btn-primary">Click Me!</button>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;v&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <h1 style="font-size:2em ;"> My Coding Projects! </h1>
 <h3 style="font-size:1em ;"> My first thing is My shop that I use to sell useless things. </h3>
+    
     <p><a href="https://codepen.io/Jotaro-Kujo-the-lessful/full/LYwNeZL">www.aadhavinc.codepen.io</a></p>
     <h3 style="font-size:1em ;"> And here is a game that I made! (you use w and s to move and the arrow keys and I reccomend to full screen it)</h3>
-    <img src="https://user-images.githubusercontent.com/12528718/134925580-9b88a130-bc8f-4171-bac9-55002be74d88.png" alt="GitHub - hheimerd/pong: 🏓 Site with Pong in multiplayer mode"/>
+    <img src="blob:chrome-untrusted://media-app/37ea9ebf-31ae-4d45-8a26-77c76cbd97ea" alt="download.png"/>
     <p><a href="https://eternalxlks.github.io/eternalxlkswebpong.github.io/">Web Pong!</a></p>
     <h3 style="font-size:1em ;"> The next item is a simulation of marine life. </h3>
     <p><a href="https://codepen.io/Jotaro-Kujo-the-lessful/full/zYgjrwM">World War Fish!</a></p>
