--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@ Sorry about that. Just needed to enable JavaScript and become cool. Anyways, wel
     <button onclick="alert('You Clicked Me!')" class="btn btn-primary">Click Me!</button>
     <h1 style="font-size:2em ;"> My Coding Projects! </h1>
     <h3 style="font-size:1em ;"> My first thing is My shop that I use to sell useless things. </h3> 
+    <img src="https://github.com/eternalxlks/eternalxlks.github.io/blob/main/folder/steamshop.png?raw=true" alt="steamshop.png"/>
     <p><a href="https://codepen.io/Jotaro-Kujo-the-lessful/full/LYwNeZL">www.aadhavinc.codepen.io</a></p>
     <h3 style="font-size:1em ;"> And here is a game that I made! (you use w and s to move and the arrow keys and I reccomend to full screen it)</h3>
     <img src="https://github.com/eternalxlks/eternalxlks.github.io/blob/main/folder/Pong.png?raw=true" alt="Pong.png"/>
