--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@ Sorry about that. Just needed to enable JavaScript and become cool. Anyways, wel
     <img src="https://github.com/eternalxlks/eternalxlks.github.io/blob/main/folder/Pong.png?raw=true" alt="Pong.png"/>
     <p><a href="https://eternalxlks.github.io/eternalxlkswebpong.github.io/">Web Pong!</a></p>
     <h3 style="font-size:1em ;"> The next item is a simulation of marine life. </h3>
+    <img src="https://github.com/eternalxlks/eternalxlks.github.io/blob/main/folder/gyatt.png?raw=true" alt="gyatt.png"/>
     <p><a href="https://codepen.io/Jotaro-Kujo-the-lessful/full/wvVogLe">World War Fish!</a></p>
     <h5> Hey, wanna learn some coding? These are great resources! (I am self thought)</h5>
     <p><a href="https://www.w3schools.com">W3 Schools!</a></p>
