--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <meta name="author" content="Aadhav Guruswamy">
     <meta name="description" content="About Aadhav Guruswamy">
-    <meta name="keywords" content="Aadhav Guruswamy, About Aadhav Guruswamy, Aadhav, Aadhav ">
+    <meta name="keywords" content="Aadhav Guruswamy, About Aadhav Guruswamy, Aadhav, Aadhav G">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body data-bs-spy="scroll" data-bs-target="#navbar-example">
@@ -13,13 +13,13 @@
       <a class="navbar-brand" href="#">Aadhav Guruswamy's Website</a>
       <ul class="nav nav-pills" role="tablist">
         <li class="nav-item">
-          <a class="nav-link" href="#about-me">About Me!</a>
+          <a class="nav-link" href="#about-me">About-Me</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#my-projects">My Coding Projects!</a>
+          <a class="nav-link" href="#my-projects">My-Coding-Projects!</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#resources">Learn Some Coding!</a>
+          <a class="nav-link" href="#resources">Learn-Some-Coding!</a>
         </li>
       </ul>
     </nav>
@@ -47,13 +47,15 @@
 Sorry about that. Just needed to enable JavaScript and become cool. Anyways, welcome to my website.</pre>
 
     
-    <p>Hello, and welcome to my website. This is the website of an 11 year old, so don't expect too much.</p>
+    <p>Hello, and welcome to my website. This is the website of an 11 year old, so don't expect too much.</p>\
+    <div id="About-Me">
     <h2>About Me</h2>
     <p>My name is Aadhav Guruswamy and I am 11 years old. I know 5 languages that include: Tamil, English, Spanish, HTML, and JavaScript.</p>
     <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSNISc0Si2Onm2OaETvobcVsBsnlYlmAxW-Nw&amp;s" alt="AI Art &amp; Artist - Graybook | ❤ 𝐒𝐮𝐤𝐮𝐧𝐚 🖤 | Facebook"/>
     <!-- Argubly more of a suprise if it has rainbow text! -->
     <h2><span style="color:#FF0000">H</span><span style="color:#FF4600">e</span><span style="color:#FF8B00">r</span><span style="color:#FFD100">e</span><span style="color:#E8FF00">'</span><span style="color:#A2FF00">s</span> <span style="color:#5DFF00">a</span> <span style="color:#17FF00">s</span><span style="color:#00FF2E">u</span><span style="color:#00FF74">r</span><span style="color:#00FFB9">p</span><span style="color:#00FFFF">r</span><span style="color:#00B9FF">i</span><span style="color:#0074FF">s</span><span style="color:#002EFF">e</span> <span style="color:#1700FF">f</span><span style="color:#5D00FF">o</span><span style="color:#A200FF">r</span> <span style="color:#E800FF">y</span><span style="color:#FF00D1">o</span><span style="color:#FF008B">u</span><span style="color:#FF0046">!</span></h2>
     <button onclick="alert('You Clicked Me!')" class="btn btn-primary">Click Me!</button>
+    <div id="My-Coding-Projects!">
     <h1 style="font-size:2em ;"> My Coding Projects! </h1>
     <h3 style="font-size:1em ;"> My first thing is My shop that I use to sell useless things. </h3> 
     <img src="https://github.com/eternalxlks/eternalxlks.github.io/blob/main/folder/steamshop.png?raw=true" alt="steamshop.png"/>
@@ -64,6 +66,7 @@ Sorry about that. Just needed to enable JavaScript and become cool. Anyways, wel
     <h3 style="font-size:1em ;"> The next item is a simulation of marine life. </h3>
     <img src="https://github.com/eternalxlks/eternalxlks.github.io/blob/main/folder/gyatt.png?raw=true" alt="gyatt.png"/>
     <p><a href="https://codepen.io/Jotaro-Kujo-the-lessful/full/wvVogLe">World War Fish!</a></p>
+    <div id="Learn-Some-Coding!">   
     <h5> Hey, wanna learn some coding? These are great resources! (I am self thought)</h5>
     <p><a href="https://www.w3schools.com">W3 Schools!</a></p>
     <p><a href="https://www.freecodecamp.org/">Free Code Camp!</a></p>
