--- a/index.html
+++ b/index.html
@@ -40,12 +40,6 @@
   <body>
     <h1>Hello!</h1>
 
-    <pre id="welcome">Please enable JavaScript.
-(•_•)
-( •_•)>⌐■-■
-(⌐■_■)
-Sorry about that. Just needed to enable JavaScript and become cool. Anyways, welcome to my website.</pre>
-
     
     <p>Hello, and welcome to my website. This is the website of an 11 year old, so don't expect too much.</p>\
     <div id="About-Me">
@@ -77,18 +71,18 @@ Sorry about that. Just needed to enable JavaScript and become cool. Anyways, wel
     <p><a href="https://www.youtube.com/watch?v=5B-ftwU6uOQ">Case Wars!</p>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script>
-      var asciiArt = [
+  var asciiArt = [
         `|‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾|
-| WELCOME TO MY WEBSITE |
+| WELCOME TO MY WEBSITE! |
 |________________________|
 (\\__/) || 
 (•ㅅ•) || 
 /    づ`,
-        `Welcome to my — oops, sorry…
+        `Welcome to — oops, sorry,
 (•_•)
 ( •_•)>⌐■-■
 (⌐■_■)
-Now, welcome to my  website!`,
+Now, welcome to my website!`,
         `(•_•)
 <)   )╯WELCOME
  /    \\ 
@@ -98,6 +92,12 @@ Now, welcome to my  website!`,
  (•_•)
 <)   )╯WEBSITE
  /    \\`
+        `Welcome to.... *sleeps*... sorry!
+    (<•>_<•>)
+    ( <•>_<•>)>⌐■-■
+    (⌐■-■)
+    
+    Now, welcome to my website!
       ]
     </script>
   </body>
