--- a/index.html
+++ b/index.html
@@ -39,6 +39,13 @@
   </head>
   <body>
     <h1>Hello!</h1>
+    <pre id="welcome">
+      <noscript>
+Please enable JavaScript.
+(•_•)
+( •_•)>⌐■-■
+(⌐■_■)
+Sorry about that, just needed to enable JavaScript. (HTML is better)
 
     
     <p>Hello, and welcome to my website. This is the website of an 11 year old, so don't expect too much.</p>\
