--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-
+  
     <style>
       p {
         font-size: 1em;
@@ -39,7 +39,7 @@
   </head>
   <body>
     <h1>Hello!</h1>
-
+    <pre id="Please-Enable-JavaScript"></pre>
     
     <p>Hello, and welcome to my website. This is the website of an 11 year old, so don't expect too much.</p>\
     <div id="About-Me">
@@ -91,14 +91,16 @@ Now, welcome to my website!`,
   /    \\
  (•_•)
 <)   )╯WEBSITE
- /    \\`
+ /    \\`,
         `Welcome to.... *sleeps*... sorry!
     (<•>_<•>)
     ( <•>_<•>)>⌐■-■
     (⌐■-■)
     
-    Now, welcome to my website!
+    Now, welcome to my website!`
       ]
+
+      document.getElementById("Please-Enable-JavaScript").innerHTML = asciiArt[Math.floor(Math.random() * 3)]
     </script>
   </body>
 </html>
