--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <h1>Hello!</h1>
     <pre id="Please-Enable-JavaScript"></pre>
     
-    <p>Hello, and welcome to my website. This is the website of an 11 year old, so don't expect too much.</p>\
+    <p>Hello, and welcome to my website. This is the website of an 11 year old, so don't expect too much.</p>
     <div id="About-Me">
     <h2>About Me</h2>
     <p>My name is Aadhav Guruswamy and I am 11 years old. I know 5 languages that include: Tamil, English, Spanish, HTML, and JavaScript.</p>
