--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
     <img src="https://github.com/eternalxlks/eternalxlks.github.io/blob/main/folder/gyatt.png?raw=true" alt="gyatt.png"/>
     <p><a href="https://codepen.io/Jotaro-Kujo-the-lessful/full/wvVogLe">World War Fish!</a></p>
       <h3 style="font-size:1em ;"> The next item is a Bomb Dodgers!
+        <img src="https://github.com/eternalxlks/eternalxlks.github.io/blob/main/folder/canvas.png?raw=true" alt="canvas.png"/>
         <p><a href="https://eternalxlks.github.io/Bomb-Dodgers-/">World War Fish!</a></p>
     <div id="Learn-Some-Coding!">   
     <h5> Hey, wanna learn some coding? These are great resources! (I am self thought)</h5>
