--- a/index.html
+++ b/index.html
@@ -48,19 +48,19 @@
       <h2><span style="color:#FF0000">H</span><span style="color:#FF4600">e</span><span style="color:#FF8B00">r</span><span style="color:#FFD100">e</span><span style="color:#E8FF00">'</span><span style="color:#A2FF00">s</span> <span style="color:#5DFF00">a</span> <span style="color:#17FF00">s</span><span style="color:#00FF2E">u</span><span style="color:#00FF74">r</span><span style="color:#00FFB9">p</span><span style="color:#00FFFF">r</span><span style="color:#00B9FF">i</span><span style="color:#0074FF">s</span><span style="color:#002EFF">e</span> <span style="color:#1700FF">f</span><span style="color:#5D00FF">o</span><span style="color:#A200FF">r</span> <span style="color:#E800FF">y</span><span style="color:#FF00D1">o</span><span style="color:#FF008B">u</span><span style="color:#FF0046">!</span></h2>
     <button onclick="alert('You Clicked Me!')" class="btn btn-primary">Click Me!</button>
     <div id="My-Coding-Projects!">
-    <h1 style="font-size:2em ;"> My Coding Projects! </h1>
-    <h3 style="font-size:1em ;"> My first thing is My shop that I use to sell useless things. </h3> 
+    <h1 style="font-size:3em ;"> My Coding Projects! </h1>
+    <h3 style="font-size:2em ;"> Steam Shop! </h3> 
     <img src="https://github.com/eternalxlks/eternalxlks.github.io/blob/main/folder/steamshop.png?raw=true" alt="steamshop.png"/>
     <p><a href="https://codepen.io/Jotaro-Kujo-the-lessful/full/LYwNeZL">www.aadhavinc.codepen.io</a></p>
-    <h3 style="font-size:1em ;"> And here is a game that I made! (you use w and s to move and the arrow keys and I reccomend to full screen it)</h3>
+    <h3 style="font-size:2em ;"> Web Pong!</h3>
     <img src="https://github.com/eternalxlks/eternalxlks.github.io/blob/main/folder/Pong.png?raw=true" alt="Pong.png"/>
     <p><a href="https://eternalxlks.github.io/eternalxlkswebpong.github.io/">Web Pong!</a></p>
-    <h3 style="font-size:1em ;"> The next item is a simulation of marine life. </h3>
+    <h3 style="font-size:2em ;"> The next item is a simulation of marine life. </h3>
     <img src="https://github.com/eternalxlks/eternalxlks.github.io/blob/main/folder/gyatt.png?raw=true" alt="gyatt.png"/>
-    <p><a href="https://codepen.io/Jotaro-Kujo-the-lessful/full/wvVogLe">World War Fish!</a></p>
-      <h3 style="font-size:1em ;"> The next item is a Bomb Dodgers!
+    <p><a href="https://codepen.io/Jotaro-Kujo-the-lessful/full/wvVogLe">Go under the sea!</a></p>
+      <h3 style="font-size:2em ;"> The next item is a Bomb Dodgers!</h3>
         <img src="https://github.com/eternalxlks/eternalxlks.github.io/blob/main/folder/canvas.png?raw=true" alt="canvas.png"/>
-        <p><a href="https://eternalxlks.github.io/Bomb-Dodgers-/">World War Fish!</a></p>
+        <p><a href="https://eternalxlks.github.io/Bomb-Dodgers-/">Bomb Dodgers!</a></p>
     <div id="Learn-Some-Coding!">   
     <h5> Hey, wanna learn some coding? These are great resources! (I am self thought)</h5>
     <p><a href="https://www.w3schools.com">W3 Schools!</a></p>
