--- a/index.html
+++ b/index.html
@@ -49,16 +49,16 @@
     <button onclick="alert('You Clicked Me!')" class="btn btn-primary">Click Me!</button>
     <div id="My-Coding-Projects!">
     <h1 style="font-size:3em ;"> My Coding Projects! </h1>
-    <h3 style="font-size:2em ;"> Steam Shop! </h3> 
+    <h3 style="font-size:2em ;"> Steam Shop! </h3>
     <img src="https://github.com/eternalxlks/eternalxlks.github.io/blob/main/folder/steamshop.png?raw=true" alt="steamshop.png"/>
     <p><a href="https://codepen.io/Jotaro-Kujo-the-lessful/full/LYwNeZL">www.aadhavinc.codepen.io</a></p>
-    <h3 style="font-size:2em ;"> Web Pong!</h3>
+    <h3 style="font-size:2em ;"> Web Pong!<span class="badge text-bg-primary">Updated!</span></h3>
     <img src="https://github.com/eternalxlks/eternalxlks.github.io/blob/main/folder/Pong.png?raw=true" alt="Pong.png"/>
     <p><a href="https://eternalxlks.github.io/eternalxlkswebpong.github.io/">Web Pong!</a></p>
     <h3 style="font-size:2em ;"> The next item is a simulation of marine life. </h3>
     <img src="https://github.com/eternalxlks/eternalxlks.github.io/blob/main/folder/gyatt.png?raw=true" alt="gyatt.png"/>
     <p><a href="https://codepen.io/Jotaro-Kujo-the-lessful/full/wvVogLe">Go under the sea!</a></p>
-      <h3 style="font-size:2em ;"> The next item is a Bomb Dodgers!</h3>
+      <h3 style="font-size:2em ;"> The next item is a Bomb Dodgers!<span class="badge text-bg-primary">Updated!</span></h3>
         <img src="https://github.com/eternalxlks/eternalxlks.github.io/blob/main/folder/canvas.png?raw=true" alt="canvas.png"/>
         <p><a href="https://eternalxlks.github.io/Bomb-Dodgers-/">Bomb Dodgers!</a></p>
     <div id="Learn-Some-Coding!">   
