--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <img src="https://github.com/eternalxlks/eternalxlks.github.io/blob/main/folder/steamshop.png?raw=true" alt="steamshop.png"/>
     <p><a href="https://codepen.io/Jotaro-Kujo-the-lessful/full/LYwNeZL">www.aadhavinc.codepen.io</a></p>
     <h3 style="font-size:2em ;"> Web Pong!<span class="badge text-bg-primary">Updated!</span></h3>
-    <img src="https://github.com/eternalxlks/eternalxlks.github.io/blob/main/folder/Pong.png?raw=true" alt="Pong.png"/>
+    <img src="https://eternalxlks.github.io/WebPong/" alt="Pong.png"/>
     <p><a href="https://eternalxlks.github.io/eternalxlkswebpong.github.io/">Web Pong!</a></p>
     <h3 style="font-size:2em ;"> The next item is a simulation of marine life. </h3>
     <img src="https://github.com/eternalxlks/eternalxlks.github.io/blob/main/folder/gyatt.png?raw=true" alt="gyatt.png"/>
