--- a/index.html
+++ b/index.html
@@ -53,14 +53,14 @@
     <img src="https://github.com/eternalxlks/eternalxlks.github.io/blob/main/folder/steamshop.png?raw=true" alt="steamshop.png"/>
     <p><a href="https://codepen.io/Jotaro-Kujo-the-lessful/full/LYwNeZL">www.aadhavinc.codepen.io</a></p>
     <h3 style="font-size:2em ;"> Web Pong!<span class="badge text-bg-primary">Updated!</span></h3>
-    <img src="<img src="https://github.com/eternalxlks/eternalxlks.github.io/blob/main/folder/Pong.png?raw=true" alt="Pong.png"/>" alt="Pong.png"/>
-    <p><a href="https://eternalxlks.github.io/eternalxlkswebpong.github.io/">Web Pong!</a></p>
+    <img src="https://github.com/eternalxlks/eternalxlks.github.io/blob/main/folder/webpong.png?raw=true" alt="webpong.png"/>
+    <p><a href="https://eternalxlks.github.io/WebPong/">Web Pong!</a></p>
     <h3 style="font-size:2em ;"> The next item is a simulation of marine life. </h3>
     <img src="https://github.com/eternalxlks/eternalxlks.github.io/blob/main/folder/gyatt.png?raw=true" alt="gyatt.png"/>
     <p><a href="https://codepen.io/Jotaro-Kujo-the-lessful/full/wvVogLe">Go under the sea!</a></p>
       <h3 style="font-size:2em ;"> The next item is a Bomb Dodgers!<span class="badge text-bg-primary">Updated!</span></h3>
         <img src="https://github.com/eternalxlks/eternalxlks.github.io/blob/main/folder/canvas.png?raw=true" alt="canvas.png"/>
-        <p><a href="https://eternalxlks.github.io/Bomb-Dodgers-/">Bomb Dodgers!</a></p>
+        <p><a href="https://eternalxlks.github.io/BombDodgers/">Bomb Dodgers!</a></p>
     <div id="Learn-Some-Coding!">   
     <h5> Hey, wanna learn some coding? These are great resources! (I am self thought)</h5>
     <p><a href="https://www.w3schools.com">W3 Schools!</a></p>
