--- a/index.html
+++ b/index.html
@@ -61,6 +61,8 @@
       <h3 style="font-size:2em ;"> The next item is a Bomb Dodgers!<span class="badge text-bg-primary">Updated!</span></h3>
         <img src="https://github.com/eternalxlks/eternalxlks.github.io/blob/main/folder/canvas.png?raw=true" alt="canvas.png"/>
         <p><a href="https://eternalxlks.github.io/BombDodgers/">Bomb Dodgers!</a></p>
+      <h3 style="font-size:2em ;">BitHub! </h3>
+      <p><a href="https://eternalxlks.github.io/BitHub/">Bomb Dodgers!</a></p>
     <div id="Learn-Some-Coding!">   
     <h5> Hey, wanna learn some coding? These are great resources! (I am self thought)</h5>
     <p><a href="https://www.w3schools.com">W3 Schools!</a></p>
