--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
     <h3 style="font-size:2em ;"> Web Pong!<span class="badge text-bg-primary">Updated!</span></h3>
     <img src="https://github.com/eternalxlks/eternalxlks.github.io/blob/main/folder/webpong.png?raw=true" alt="webpong.png"/>
     <p><a href="https://eternalxlks.github.io/WebPong/">Web Pong!</a></p>
-    <h3 style="font-size:2em ;"> The next item is a simulation of marine life. </h3>
-    <img src="https://github.com/eternalxlks/eternalxlks.github.io/blob/main/folder/gyatt.png?raw=true" alt="gyatt.png"/>
+    <h3 style="font-size:2em ;"> The next item is a simulation of marine life. </h3><span class="badge text-bg-primary">Updated!</span></h3>
+    <img src="https://github.com/eternalxlks/eternalxlks.github.io/blob/main/folder/download.png?raw=true" alt="download.png"/>
     <p><a href="https://codepen.io/Jotaro-Kujo-the-lessful/full/wvVogLe">Go under the sea!</a></p>
       <h3 style="font-size:2em ;"> The next item is a Bomb Dodgers!<span class="badge text-bg-primary">Updated!</span></h3>
         <img src="https://github.com/eternalxlks/eternalxlks.github.io/blob/main/folder/canvas.png?raw=true" alt="canvas.png"/>
