--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
    <h2><span style="color:#FF0505">B</span><span style="color:#FF8205">o</span><span style="color:#FFFF05">m</span><span style="color:#82FF05">b</span> <span style="color:#05FF05">D</span><span style="color:#05FF82">o</span><span style="color:#05FFFF">d</span><span style="color:#0582FF">g</span><span style="color:#0505FF">e</span><span style="color:#8205FF">r</span><span style="color:#FF05FF">s</span><span style="color:#FF0582">!</span></h2>
 <img src="https://github.com/eternalxlks/eternalxlks.github.io/blob/main/folder/sky.png?raw=true" alt="sky.png"/>
         <p><a href="https://eternalxlks.github.io/BombDodgers/">Bomb Dodgers!</a></p>
-     <h2><span style="color:#FF0505">B</span><span style="color:#FFDB05">i</span><span style="color:#4CFF05">t</span><span style="color:#05FF94">H</span><span style="color:#0594FF">u</span><span style="color:#4D05FF">b</span><span style="color:#FF05DB">!</span</h2>
+<span style="color:#FF0000">B</span><span style="color:#FFDB00">i</span><span style="color:#49FF00">t</span><span style="color:#00FF92">H</span><span style="color:#0092FF">u</span><span style="color:#4900FF">b</span><span style="color:#FF00DB">!</span>
       <p><a href="https://eternalxlks.github.io/BitHub/">BitHub, which is better GitHub</a></p>
     <div id="Learn-Some-Coding!">   
     <h5> Hey, wanna learn some coding? These are great resources! (I am self thought)</h5>
