2 File Splitter (2FS is totally made up!)

--- a/index.html
+++ b/index.html
@@ -63,7 +63,11 @@
         <p><a href="https://eternalxlks.github.io/BombDodgers/">Bomb Dodgers!</a></p>
 <h2><span style="color:#FF0000">B</span><span style="color:#FFDB00">i</span><span style="color:#49FF00">t</span><span style="color:#00FF92">H</span><span style="color:#0092FF">u</span><span style="color:#4900FF">b</span><span style="color:#FF00DB">!</span></h2>
       <p><a href="https://eternalxlks.github.io/BitHub/">BitHub, which is better GitHub</a></p>
-    <div id="Learn-Some-Coding!">   
+      <h2><span style="color:#FF0000">2</span><span style="color:#FF8000">D</span><span style="color:#FFFF00">-</span><span style="color:#80FF00">M</span><span style="color:#00FF00">i</span><span style="color:#00FF80">n</span><span style="color:#00FFFF">e</span><span style="color:#007FFF">c</span><span style="color:#0000FF">r</span><span style="color:#7F00FF">a</span><span style="color:#FF00FF">f</span><span style="color:#FF0080">t</span></h2>
+   <p><a href="https://eternalxlks.github.io/2D-Minecraft/">2D Minecraft!</a></p>
+      <h2><span style="color:#FF0000">2</span><span style="color:#FF8B00">D</span><span style="color:#E8FF00">-</span><span style="color:#5DFF00">F</span><span style="color:#00FF2E">o</span><span style="color:#00FFB9">r</span><span style="color:#00B9FF">t</span><span style="color:#002EFF">n</span><span style="color:#5D00FF">i</span><span style="color:#E800FF">t</span><span style="color:#FF008B">e</span></h2>
+      <p><a href="https://eternalxlks.github.io/2D-Fortnite/"> 2D-Fortnite on the web!</a></p>
+      <div id="Learn-Some-Coding!">   
     <h5> Hey, wanna learn some coding? These are great resources! (I am self thought)</h5>
     <p><a href="https://www.w3schools.com">W3 Schools!</a></p>
     <p><a href="https://www.freecodecamp.org/">Free Code Camp!</a></p>
