--- a/ERROR.html
+++ b/ERROR.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>This Content is illegal</title>
+  <title>This Content is Not Available in Your Country</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
     body {
@@ -25,7 +25,7 @@
 </head>
 <body>
   <div class="error-box">
-    <p class="lead mb-0">This content has been blocked by the FBI because it contains a virus</p>
+    <p class="lead mb-0">This content is not available in your country.</p>
   </div>
 </body>
 </html>
