--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@
    <p><a href="https://eternalxlks.github.io/2D-Minecraft/">2D Minecraft!</a></p>
       <h2><span style="color:#FF0000">2</span><span style="color:#FF8B00">D</span><span style="color:#E8FF00">-</span><span style="color:#5DFF00">F</span><span style="color:#00FF2E">o</span><span style="color:#00FFB9">r</span><span style="color:#00B9FF">t</span><span style="color:#002EFF">n</span><span style="color:#5D00FF">i</span><span style="color:#E800FF">t</span><span style="color:#FF008B">e</span></h2>
       <p><a href="https://eternalxlks.github.io/2D-Fortnite/"> 2D-Fortnite on the web!</a></p>
+      <h2><span style="color:#FF0A0A">T</span><span style="color:#FF6C0A">h</span><span style="color:#FFCE0A">e</span> <span style="color:#CEFF0A">E</span><span style="color:#6CFF0A">t</span><span style="color:#0AFF0A">e</span><span style="color:#0AFF6C">r</span><span style="color:#0AFFCE">n</span><span style="color:#0ACEFF">a</span><span style="color:#0A6CFF">l</span><span style="color:#0A0AFF">S</span><span style="color:#6C0AFF">h</span><span style="color:#CE0AFF">o</span><span style="color:#FF0ACE">p</span><span style="color:#FF0A6C">!</span></h2>
+       <p><a href="https://eternalxlks.github.io/EternalShop/">The EternalShop!</a></p>
       <div id="Learn-Some-Coding!">   
     <h5> Hey, wanna learn some coding? These are great resources! (I am self thought)</h5>
     <p><a href="https://www.w3schools.com">W3 Schools!</a></p>
