--- a/404.html
+++ b/404.html
@@ -25,7 +25,7 @@
 </head>
 <body>
   <div class="error-box">
-    <p class="lead mb-0">This content is not available in your country.</p>
+    <p class="lead mb-0">This content is blocked by the FBI</p>
   </div>
 </body>
 </html>
