--- a/index.html
+++ b/index.html
@@ -13,16 +13,17 @@
       <a class="navbar-brand" href="#">Aadhav Guruswamy's Website</a>
       <ul class="nav nav-pills" role="tablist">
         <li class="nav-item">
-          <a class="nav-link" href="#about-me">About-Me</a>
+          <a class="nav-link" href="#about-me">About Me</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#my-projects">My-Coding-Projects!</a>
+          <a class="nav-link" href="#my-projects">My Projects</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#resources">Learn-Some-Coding!</a>
+          <a class="nav-link" href="#resources">Resources</a>
         </li>
       </ul>
     </nav>
+
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
@@ -38,6 +39,7 @@
     </style>
   </head>
   <body>
+    <div id="about-me">
     <h1>Hello!</h1>
     <pre id="Please-Enable-JavaScript"></pre>
   <p>Hello, and welcome to my website. This is the website of an 11 year old, so don't expect too much.</p>
