--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <p><a href="https://eternalxlks.github.io/WebPong/">Web Pong!</a></p>
    <h2><span style="color:#FF0505">U</span><span style="color:#FF8205">n</span><span style="color:#FFFF05">d</span><span style="color:#82FF05">e</span><span style="color:#05FF05">r</span> <span style="color:#05FF82">T</span><span style="color:#05FFFF">h</span><span style="color:#0582FF">e</span> <span style="color:#0505FF">S</span><span style="color:#8205FF">e</span><span style="color:#FF05FF">a</span><span style="color:#FF0582">!</span></h2>
     <img src="https://github.com/eternalxlks/eternalxlks.github.io/blob/main/folder/download.png?raw=true" alt="download.png"/>
-    <p><a href="https://codepen.io/Jotaro-Kujo-the-lessful/full/wvVogLe">Go under the sea!</a></p>
+    <p><a href="https://eternalxlks.github.io/A-World-Of-Fish/">Go under the sea!</a></p>
    <h2><span style="color:#FF0505">B</span><span style="color:#FF8205">o</span><span style="color:#FFFF05">m</span><span style="color:#82FF05">b</span> <span style="color:#05FF05">D</span><span style="color:#05FF82">o</span><span style="color:#05FFFF">d</span><span style="color:#0582FF">g</span><span style="color:#0505FF">e</span><span style="color:#8205FF">r</span><span style="color:#FF05FF">s</span><span style="color:#FF0582">!</span></h2>
 <img src="https://github.com/eternalxlks/eternalxlks.github.io/blob/main/folder/sky.png?raw=true" alt="sky.png"/>
         <p><a href="https://eternalxlks.github.io/BombDodgers/">Bomb Dodgers!</a></p>
