--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <!-- Argubly more of a suprise if it has rainbow text! -->
       <h2><span style="color:#FF0000">H</span><span style="color:#FF4600">e</span><span style="color:#FF8B00">r</span><span style="color:#FFD100">e</span><span style="color:#E8FF00">'</span><span style="color:#A2FF00">s</span> <span style="color:#5DFF00">a</span> <span style="color:#17FF00">s</span><span style="color:#00FF2E">u</span><span style="color:#00FF74">r</span><span style="color:#00FFB9">p</span><span style="color:#00FFFF">r</span><span style="color:#00B9FF">i</span><span style="color:#0074FF">s</span><span style="color:#002EFF">e</span> <span style="color:#1700FF">f</span><span style="color:#5D00FF">o</span><span style="color:#A200FF">r</span> <span style="color:#E800FF">y</span><span style="color:#FF00D1">o</span><span style="color:#FF008B">u</span><span style="color:#FF0046">!</span></h2>
     <button onclick="alert('You Clicked Me!')" class="btn btn-primary">Click Me!</button>
-    <div id="My-Coding-Projects!">
+    <div id="my-projects">
     <h1 style="font-size:3em ;"> My Coding Projects! </h1>
 <h2><span style="color:#FF0505">w</span><span style="color:#FF4605">w</span><span style="color:#FF8705">w</span><span style="color:#FFC905">.</span><span style="color:#F4FF05">a</span><span style="color:#B3FF05">a</span><span style="color:#72FF05">d</span><span style="color:#31FF05">h</span><span style="color:#05FF1B">a</span><span style="color:#05FF5C">v</span><span style="color:#05FF9D">i</span><span style="color:#05FFDE">n</span><span style="color:#05DEFF">c</span><span style="color:#059DFF">.</span><span style="color:#055CFF">g</span><span style="color:#051BFF">i</span><span style="color:#3105FF">t</span><span style="color:#7205FF">h</span><span style="color:#B305FF">u</span><span style="color:#F405FF">b</span><span style="color:#FF05C9">.</span><span style="color:#FF0587">i</span><span style="color:#FF0546">o</span></h2>
     <img src="https://github.com/eternalxlks/eternalxlks.github.io/blob/main/folder/steamshop.png?raw=true" alt="steamshop.png"/>
@@ -71,7 +71,7 @@
       <p><a href="https://eternalxlks.github.io/2D-Fortnite/"> 2D-Fortnite on the web!</a></p>
       <h2><span style="color:#FF0A0A">T</span><span style="color:#FF6C0A">h</span><span style="color:#FFCE0A">e</span> <span style="color:#CEFF0A">E</span><span style="color:#6CFF0A">t</span><span style="color:#0AFF0A">e</span><span style="color:#0AFF6C">r</span><span style="color:#0AFFCE">n</span><span style="color:#0ACEFF">a</span><span style="color:#0A6CFF">l</span><span style="color:#0A0AFF">S</span><span style="color:#6C0AFF">h</span><span style="color:#CE0AFF">o</span><span style="color:#FF0ACE">p</span><span style="color:#FF0A6C">!</span></h2>
        <p><a href="https://eternalxlks.github.io/EternalShop/">The EternalShop!</a></p>
-      <div id="Learn-Some-Coding!">   
+      <div id="resources">   
     <h5> Hey, wanna learn some coding? These are great resources! (I am self thought)</h5>
     <p><a href="https://www.w3schools.com">W3 Schools!</a></p>
     <p><a href="https://www.freecodecamp.org/">Free Code Camp!</a></p>
