--- a/index.html
+++ b/index.html
@@ -1,119 +1,85 @@
 <!DOCTYPE html>
-<html lang="en-US">
-  <head>
-    <title>Aadhav Guruswamy's Website</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <meta name="author" content="Aadhav Guruswamy">
-    <meta name="description" content="About Aadhav Guruswamy">
-    <meta name="keywords" content="Aadhav Guruswamy, About Aadhav Guruswamy, Aadhav, Aadhav G">
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  </head>
-  <body data-bs-spy="scroll" data-bs-target="#navbar-example">
-    <nav id="navbar-example" class="navbar navbar-light bg-light px-3 sticky-top" data-bs-offset="0">
-      <a class="navbar-brand" href="#">Aadhav Guruswamy's Website</a>
-      <ul class="nav nav-pills" role="tablist">
-        <li class="nav-item">
-          <a class="nav-link" href="#about-me">About Me</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#my-projects">My Projects</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#resources">Resources</a>
-        </li>
-      </ul>
+    <title>My Website</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f9;
+            color: #333;
+        }
+
+        header {
+            background-color: #4CAF50;
+            color: white;
+            padding: 20px;
+            text-align: center;
+        }
+
+        nav {
+            display: flex;
+            justify-content: center;
+            background: #333;
+            padding: 10px;
+        }
+
+        nav a {
+            color: white;
+            margin: 0 15px;
+            text-decoration: none;
+            font-weight: bold;
+        }
+
+        nav a:hover {
+            text-decoration: underline;
+        }
+
+        .container {
+            padding: 20px;
+            max-width: 800px;
+            margin: 20px auto;
+            background: white;
+            border-radius: 8px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
+
+        footer {
+            text-align: center;
+            padding: 10px;
+            background: #333;
+            color: white;
+            position: fixed;
+            width: 100%;
+            bottom: 0;
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>Welcome.</h1>
+        <p>My basic website. Nothing more.</p>
+    </header>
+
+    <nav>
+        <a href="#home">Home</a>
+        <a href="#about">About</a>
+        <a href="#contact">Contact</a>
     </nav>
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <div class="container">
+        <h2>My Projects.</h2>
+        <p>Now, I'm going to run through my projects.
+        </p>
+       <h2><span style="color:#FF0000">2</span><span style="color:#FF8B00">D</span><span style="color:#E8FF00">-</span><span style="color:#5DFF00">F</span><span style="color:#00FF2E">o</span><span style="color:#00FFB9">r</span><span style="color:#00B9FF">t</span><span style="color:#002EFF">n</span><span style="color:#5D00FF">i</span><span style="color:#E800FF">t</span><span style="color:#FF008B">e</span></h2>
+       <p><a href="https://infinitexlks.github.io/2D-Fortnite/">2D Fortnite!</a></p>
+    </div>
 
-  
-    <style>
-      p {
-        font-size: 1em;
-      }
-      
-      h2 {
-        font-size: 2em;
-      } 
-    </style>
-  </head>
-  <body>
-    <div id="about-me">
-    <h1>Hello!</h1>
-    <pre id="Please-Enable-JavaScript"></pre>
-  <p>Hello, and welcome to my website. This is the website of an 11 year old, so don't expect too much.</p>
-    <div id="About-Me">
-      <h2>About Me</h2>
-    <p>My name is Aadhav Guruswamy and I am 11 years old. I know 5 languages that include: Tamil, English, Spanish, HTML, and JavaScript.</p>
-    <!-- Argubly more of a suprise if it has rainbow text! -->
-      <h2><span style="color:#FF0000">H</span><span style="color:#FF4600">e</span><span style="color:#FF8B00">r</span><span style="color:#FFD100">e</span><span style="color:#E8FF00">'</span><span style="color:#A2FF00">s</span> <span style="color:#5DFF00">a</span> <span style="color:#17FF00">s</span><span style="color:#00FF2E">u</span><span style="color:#00FF74">r</span><span style="color:#00FFB9">p</span><span style="color:#00FFFF">r</span><span style="color:#00B9FF">i</span><span style="color:#0074FF">s</span><span style="color:#002EFF">e</span> <span style="color:#1700FF">f</span><span style="color:#5D00FF">o</span><span style="color:#A200FF">r</span> <span style="color:#E800FF">y</span><span style="color:#FF00D1">o</span><span style="color:#FF008B">u</span><span style="color:#FF0046">!</span></h2>
-    <button onclick="alert('You Clicked Me!')" class="btn btn-primary">Click Me!</button>
-    <div id="my-projects">
-    <h1 style="font-size:3em ;"> My Coding Projects! </h1>
-<h2><span style="color:#FF0505">w</span><span style="color:#FF4605">w</span><span style="color:#FF8705">w</span><span style="color:#FFC905">.</span><span style="color:#F4FF05">a</span><span style="color:#B3FF05">a</span><span style="color:#72FF05">d</span><span style="color:#31FF05">h</span><span style="color:#05FF1B">a</span><span style="color:#05FF5C">v</span><span style="color:#05FF9D">i</span><span style="color:#05FFDE">n</span><span style="color:#05DEFF">c</span><span style="color:#059DFF">.</span><span style="color:#055CFF">g</span><span style="color:#051BFF">i</span><span style="color:#3105FF">t</span><span style="color:#7205FF">h</span><span style="color:#B305FF">u</span><span style="color:#F405FF">b</span><span style="color:#FF05C9">.</span><span style="color:#FF0587">i</span><span style="color:#FF0546">o</span></h2>
-    <img src="https://github.com/eternalxlks/eternalxlks.github.io/blob/main/folder/steamshop.png?raw=true" alt="steamshop.png"/>
-    <p><a href="https://codepen.io/Jotaro-Kujo-the-lessful/full/LYwNeZL">www.aadhavinc.codepen.io</a></p>
- <h2><span style="color:#FF0505">W</span><span style="color:#FFC105">e</span><span style="color:#82FF05">b</span> <span style="color:#05FF44">P</span><span style="color:#05FFFF">o</span><span style="color:#0544FF">n</span><span style="color:#8205FF">g</span><span style="color:#FF05C1">!</span></h2>
-    <img src="https://github.com/eternalxlks/eternalxlks.github.io/blob/main/folder/webpong.png?raw=true" alt="webpong.png"/>
-    <p><a href="https://eternalxlks.github.io/WebPong/">Web Pong!</a></p>
-   <h2><span style="color:#FF0505">U</span><span style="color:#FF8205">n</span><span style="color:#FFFF05">d</span><span style="color:#82FF05">e</span><span style="color:#05FF05">r</span> <span style="color:#05FF82">T</span><span style="color:#05FFFF">h</span><span style="color:#0582FF">e</span> <span style="color:#0505FF">S</span><span style="color:#8205FF">e</span><span style="color:#FF05FF">a</span><span style="color:#FF0582">!</span></h2>
-    <img src="https://github.com/eternalxlks/eternalxlks.github.io/blob/main/folder/download.png?raw=true" alt="download.png"/>
-    <p><a href="https://eternalxlks.github.io/A-World-Of-Fish/">Go under the sea!</a></p>
-   <h2><span style="color:#FF0505">B</span><span style="color:#FF8205">o</span><span style="color:#FFFF05">m</span><span style="color:#82FF05">b</span> <span style="color:#05FF05">D</span><span style="color:#05FF82">o</span><span style="color:#05FFFF">d</span><span style="color:#0582FF">g</span><span style="color:#0505FF">e</span><span style="color:#8205FF">r</span><span style="color:#FF05FF">s</span><span style="color:#FF0582">!</span></h2>
-<img src="https://github.com/eternalxlks/eternalxlks.github.io/blob/main/folder/sky.png?raw=true" alt="sky.png"/>
-        <p><a href="https://eternalxlks.github.io/BombDodgers/">Bomb Dodgers!</a></p>
-<h2><span style="color:#FF0000">B</span><span style="color:#FFDB00">i</span><span style="color:#49FF00">t</span><span style="color:#00FF92">H</span><span style="color:#0092FF">u</span><span style="color:#4900FF">b</span><span style="color:#FF00DB">!</span></h2>
-      <p><a href="https://eternalxlks.github.io/BitHub/">BitHub, which is better GitHub</a></p>
-      <h2><span style="color:#FF0000">2</span><span style="color:#FF8000">D</span><span style="color:#FFFF00">-</span><span style="color:#80FF00">M</span><span style="color:#00FF00">i</span><span style="color:#00FF80">n</span><span style="color:#00FFFF">e</span><span style="color:#007FFF">c</span><span style="color:#0000FF">r</span><span style="color:#7F00FF">a</span><span style="color:#FF00FF">f</span><span style="color:#FF0080">t</span></h2>
-   <p><a href="https://eternalxlks.github.io/2D-Minecraft/">2D Minecraft!</a></p>
-      <h2><span style="color:#FF0000">2</span><span style="color:#FF8B00">D</span><span style="color:#E8FF00">-</span><span style="color:#5DFF00">F</span><span style="color:#00FF2E">o</span><span style="color:#00FFB9">r</span><span style="color:#00B9FF">t</span><span style="color:#002EFF">n</span><span style="color:#5D00FF">i</span><span style="color:#E800FF">t</span><span style="color:#FF008B">e</span></h2>
-      <p><a href="https://eternalxlks.github.io/2D-Fortnite/"> 2D-Fortnite on the web!</a></p>
-      <h2><span style="color:#FF0A0A">T</span><span style="color:#FF6C0A">h</span><span style="color:#FFCE0A">e</span> <span style="color:#CEFF0A">E</span><span style="color:#6CFF0A">t</span><span style="color:#0AFF0A">e</span><span style="color:#0AFF6C">r</span><span style="color:#0AFFCE">n</span><span style="color:#0ACEFF">a</span><span style="color:#0A6CFF">l</span><span style="color:#0A0AFF">S</span><span style="color:#6C0AFF">h</span><span style="color:#CE0AFF">o</span><span style="color:#FF0ACE">p</span><span style="color:#FF0A6C">!</span></h2>
-       <p><a href="https://eternalxlks.github.io/EternalShop/">The EternalShop!</a></p>
-      <div id="resources">   
-    <h5> Hey, wanna learn some coding? These are great resources! (I am self thought)</h5>
-    <p><a href="https://www.w3schools.com">W3 Schools!</a></p>
-    <p><a href="https://www.freecodecamp.org/">Free Code Camp!</a></p>
-    <p><a href="https://getbootstrap.com/docs/5.0/getting-started/introduction/">A Great Website Starter!</a></p>
-    <h5 style="font-size:2em ;"> Well, thats it for now. Thank you for visiting! </h5>
-    <h5 style="font-size:1em ;"> MR.CASE IS THE BEST TEACHER EVER! ALL ABOUT HIM HERE! </h5>
-    <p><a href="https://www.facebook.com/photo.php?fbid=10159128256737986&id=75692947985&set=a.82352267985">About Him Here!</p>
-    <h5 style="font-size:1em ;"> Video Of Him (Mr.Case is 100% him)
-    <p><a href="https://www.youtube.com/watch?v=5B-ftwU6uOQ">Case Wars!</p>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-    <script>
-  var asciiArt = [
-        `|‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾‾|
-| WELCOME TO MY WEBSITE! |
-|________________________|
-(\\__/) || 
-(•ㅅ•) || 
-/    づ`,
-        `Welcome to — oops, sorry,
-(•_•)
-( •_•)>⌐■-■
-(⌐■_■)
-Now, welcome to my website!`,
-        `(•_•)
-<)   )╯WELCOME
- /    \\ 
-  (•_•)
- \\(   (> TO MY
-  /    \\
- (•_•)
-<)   )╯WEBSITE
- /    \\`,
-        `Welcome to.... *sleeps*... sorry!
-(<•>_<•>)
-( <•>_<•>)>⌐■-■
-(⌐■-■)
-    
-Now, welcome to my website!`
-      ]
-
-      document.getElementById("Please-Enable-JavaScript").innerHTML = asciiArt[Math.floor(Math.random() * 4)]
-    </script>
-  </body>
+    <footer>
+        <p>© 2025 Your Name. All rights reserved.</p>
+    </footer>
+</body>
 </html>
-
