--- a/index.html
+++ b/index.html
@@ -77,7 +77,9 @@
        <h2><span style="color:#FF0000">2</span><span style="color:#FF8B00">D</span><span style="color:#E8FF00">-</span><span style="color:#5DFF00">F</span><span style="color:#00FF2E">o</span><span style="color:#00FFB9">r</span><span style="color:#00B9FF">t</span><span style="color:#002EFF">n</span><span style="color:#5D00FF">i</span><span style="color:#E800FF">t</span><span style="color:#FF008B">e</span></h2>
        <p><a href="https://infinitexlks.github.io/2D-Fortnite/">2D Fortnite!</a></p>
     </div>
-
+  <div class="container">
+      <h2><span style="color:#FF0000">2</span><span style="color:#FF8B00">D</span> <span style="color:#E8FF00">M</span><span style="color:#5DFF00">i</span><span style="color:#00FF2E">n</span><span style="color:#00FFB9">e</span><span style="color:#00B9FF">c</span><span style="color:#002EFF">r</span><span style="color:#5D00FF">a</span><span style="color:#E800FF">f</span><span style="color:#FF008B">t</span></h2>
+       <p><a href="https://infinitexlks.github.io/2D-Minecraft/">2D Minecraft</a></p>
     <footer>
         <p>© 2025 Your Name. All rights reserved.</p>
     </footer>
