--- a/index.html
+++ b/index.html
@@ -80,8 +80,10 @@
   <div class="container">
       <h2><span style="color:#FF0000">2</span><span style="color:#FF8B00">D</span> <span style="color:#E8FF00">M</span><span style="color:#5DFF00">i</span><span style="color:#00FF2E">n</span><span style="color:#00FFB9">e</span><span style="color:#00B9FF">c</span><span style="color:#002EFF">r</span><span style="color:#5D00FF">a</span><span style="color:#E800FF">f</span><span style="color:#FF008B">t</span></h2>
        <p><a href="https://infinitexlks.github.io/2D-Minecraft/">2D Minecraft</a></p>
-    <footer>
-        <p>© 2025 Your Name. All rights reserved.</p>
-    </footer>
+  </div>
+      <div class="container">
+          <h2><span style="color:#FF0000">H</span><span style="color:#FF8000">a</span><span style="color:#FFFF00">c</span><span style="color:#80FF00">k</span> <span style="color:#00FF00">D</span><span style="color:#00FF80">e</span><span style="color:#00FFFF">t</span><span style="color:#007FFF">e</span><span style="color:#0000FF">c</span><span style="color:#7F00FF">t</span><span style="color:#FF00FF">o</span><span style="color:#FF0080">r</span></h2>
+         <p><a href="https://infinitexlks.github.io/Hack-Detector/">Hack Deterctor</a></p>
+      </div>
 </body>
 </html>
