--- a/index.html
+++ b/index.html
@@ -85,5 +85,13 @@
           <h2><span style="color:#FF0000">H</span><span style="color:#FF8000">a</span><span style="color:#FFFF00">c</span><span style="color:#80FF00">k</span> <span style="color:#00FF00">D</span><span style="color:#00FF80">e</span><span style="color:#00FFFF">t</span><span style="color:#007FFF">e</span><span style="color:#0000FF">c</span><span style="color:#7F00FF">t</span><span style="color:#FF00FF">o</span><span style="color:#FF0080">r</span></h2>
          <p><a href="https://infinitexlks.github.io/Hack-Detector/">Hack Deterctor</a></p>
       </div>
+    <div class="container">
+        <h2><span style="color:#FF0000">M</span><span style="color:#FF7600">u</span><span style="color:#FFEB00">s</span><span style="color:#9DFF00">i</span><span style="color:#27FF00">c</span><span style="color:#00FF4E">a</span><span style="color:#00FFC4">l</span> <span style="color:#00C4FF">E</span><span style="color:#004EFF">n</span><span style="color:#2700FF">g</span><span style="color:#9D00FF">i</span><span style="color:#FF00EB">n</span><span style="color:#FF0076">e</span></h2>
+   <p><a href="https://infinitexlks.github.io/musical-engine/">Musical Engine.</a></p>
+    </div>
+    <div class="container">
+        <h2><span style="color:#FF0000">I</span><span style="color:#FF6000">n</span><span style="color:#FFBF00">f</span><span style="color:#DFFF00">i</span><span style="color:#80FF00">n</span><span style="color:#20FF00">i</span><span style="color:#00FF40">t</span><span style="color:#00FF9F">e</span><span style="color:#00FFFF">-</span><span style="color:#009FFF">B</span><span style="color:#0040FF">r</span><span style="color:#2000FF">o</span><span style="color:#7F00FF">w</span><span style="color:#DF00FF">s</span><span style="color:#FF00BF">e</span><span style="color:#FF0060">r</span></h2>
+         <p><a href="https://infinitexlks.github.io/Infinite-Browser/">My Basic Browser</a></p>
+    </div>
 </body>
 </html>
