--- a/index.html
+++ b/index.html
@@ -93,5 +93,8 @@
         <h2><span style="color:#FF0000">I</span><span style="color:#FF6000">n</span><span style="color:#FFBF00">f</span><span style="color:#DFFF00">i</span><span style="color:#80FF00">n</span><span style="color:#20FF00">i</span><span style="color:#00FF40">t</span><span style="color:#00FF9F">e</span><span style="color:#00FFFF">-</span><span style="color:#009FFF">B</span><span style="color:#0040FF">r</span><span style="color:#2000FF">o</span><span style="color:#7F00FF">w</span><span style="color:#DF00FF">s</span><span style="color:#FF00BF">e</span><span style="color:#FF0060">r</span></h2>
          <p><a href="https://infinitexlks.github.io/Infinite-Browser/">My Basic Browser</a></p>
     </div>
+       <footer>
+        <p>© 2024 infinitexlks. All rights reserved.</p>
+    </footer>
 </body>
 </html>
