--- a/index.html
+++ b/index.html
@@ -93,8 +93,12 @@
         <h2><span style="color:#FF0000">I</span><span style="color:#FF6000">n</span><span style="color:#FFBF00">f</span><span style="color:#DFFF00">i</span><span style="color:#80FF00">n</span><span style="color:#20FF00">i</span><span style="color:#00FF40">t</span><span style="color:#00FF9F">e</span><span style="color:#00FFFF">-</span><span style="color:#009FFF">B</span><span style="color:#0040FF">r</span><span style="color:#2000FF">o</span><span style="color:#7F00FF">w</span><span style="color:#DF00FF">s</span><span style="color:#FF00BF">e</span><span style="color:#FF0060">r</span></h2>
          <p><a href="https://infinitexlks.github.io/Infinite-Browser/">My Basic Browser</a></p>
     </div>
-       <footer>
-        <p>© 2024 infinitexlks. All rights reserved.</p>
-    </footer>
+    <div class="container">
+        <h2><span style="color:#FF0000">S</span><span style="color:#FF5500">o</span><span style="color:#FFAA00">l</span><span style="color:#FFFF00">i</span><span style="color:#AAFF00">d</span><span style="color:#55FF00">-</span><span style="color:#00FF00">O</span><span style="color:#00FF55">c</span><span style="color:#00FFAA">t</span><span style="color:#00FFFF">o</span><span style="color:#00AAFF">-</span><span style="color:#0055FF">T</span><span style="color:#0000FF">r</span><span style="color:#5500FF">i</span><span style="color:#AA00FF">b</span><span style="color:#FF00FF">b</span><span style="color:#FF00AA">l</span><span style="color:#FF0055">e</span></h2>
+        <p><a href="https://infinitexlks.github.io/Solid-Octo-Tribble/">Solid Octo Tribble</p>
+    </div>
+    <div class="container">
+        <h2><span style="color:#FF0000">R</span><span style="color:#FFAA00">e</span><span style="color:#AAFF00">s</span><span style="color:#00FF00">o</span><span style="color:#00FFAA">u</span><span style="color:#00AAFF">r</span><span style="color:#0000FF">c</span><span style="color:#AA00FF">e</span><span style="color:#FF00AA">s</span></h2>
+        <p><a href="https://www.w3schools.com/">W3 Schools</p>
 </body>
 </html>
