Added More Links

--- a/index.html
+++ b/index.html
@@ -98,7 +98,16 @@
         <p><a href="https://infinitexlks.github.io/Solid-Octo-Tribble/">Solid Octo Tribble</p>
     </div>
     <div class="container">
+        <h2><span style="color:#FF0000">R</span><span style="color:#FF8000">e</span><span style="color:#FFFF00">s</span><span style="color:#80FF00">t</span> <span style="color:#00FF00">A</span><span style="color:#00FF80">P</span><span style="color:#00FFFF">I</span> <span style="color:#007FFF">F</span><span style="color:#0000FF">l</span><span style="color:#7F00FF">a</span><span style="color:#FF00FF">s</span><span style="color:#FF0080">k</span></h2>
+        <p><a href="https://github.com/infinitexlks/Rest_API/">Rest API</p>
+    </div>
+    <div class="container">
+        <h2><span style="color:#FF0000">C</span><span style="color:#FF7600">I</span><span style="color:#FFEB00">F</span><span style="color:#9DFF00">A</span><span style="color:#27FF00">R</span><span style="color:#00FF4E">-</span><span style="color:#00FFC4">1</span><span style="color:#00C4FF">0</span> <span style="color:#004EFF">I</span><span style="color:#2700FF">m</span><span style="color:#9D00FF">a</span><span style="color:#FF00EB">g</span><span style="color:#FF0076">e</span> </h2>
+        <p><a href="https://github.com/infinitexlks/CIFAR-10/">CIFAR-10 Classifier</p>
+    </div>
+    <div class="container">
         <h2><span style="color:#FF0000">R</span><span style="color:#FFAA00">e</span><span style="color:#AAFF00">s</span><span style="color:#00FF00">o</span><span style="color:#00FFAA">u</span><span style="color:#00AAFF">r</span><span style="color:#0000FF">c</span><span style="color:#AA00FF">e</span><span style="color:#FF00AA">s</span></h2>
         <p><a href="https://www.w3schools.com/">W3 Schools</p>
+    </div>
 </body>
 </html>
